--- a/sass/base/_reset-custom.sass
+++ b/sass/base/_reset-custom.sass
@@ -14,6 +14,8 @@ body
     font-family: var.$font-family
     font-weight: 500
     font-size: var.$font-size-p
+    min-height: 100vh
+    min-height: 100dvh
 
 h1, h2, h3, h4
     font-weight: bold
