--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -556,7 +556,7 @@ a {
   .footer__container {
     flex-direction: row;
     justify-content: space-between;
-    max-width: 1200px;
+    max-height: 60px;
     margin: 0 auto;
   }
 }
@@ -625,7 +625,6 @@ body.public {
   color: #2b4743;
 }
 .nav__menu--item:hover {
-  color: #38d6c2;
   font-weight: 600;
 }
 
