--- a/sass/main/_footer.sass
+++ b/sass/main/_footer.sass
@@ -19,7 +19,7 @@
     @media (min-width: 768px)
         flex-direction: row
         justify-content: space-between
-        max-width: 1200px
+        max-height: 60px
         margin: 0 auto
 
     &-logo
