--- a/templates/main/home/index.html.twig
+++ b/templates/main/home/index.html.twig
@@ -11,7 +11,7 @@
             <article class="blog__highlighted-article">
                 <div class="blog__highlighted-article-header">
                     <h2 class="highlighted-title">
-                        <a href="{{ path('article.show', {'slug': latest.slug}) }}">{{ latest.title }}</a>
+                        <a href="{{ path('blog.show', {'slug': latest.slug}) }}">{{ latest.title }}</a>
                     </h2>
                     <span class="highlighted-category">{{ latest.category.name }}</span>
                 </div>
@@ -19,7 +19,7 @@
                     <p class="highlighted-meta">
                         {{ latest.metaDescription }}
                     </p>
-                    <a href="{{ path('article.show', {'slug': latest.slug}) }}" class="highlighted__read-more-link">
+                    <a href="{{ path('blog.show', {'slug': latest.slug}) }}" class="highlighted__read-more-link">
                         Lire la suite
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
                             <path d="M5 12h14M13 6l6 6-6 6"/>
@@ -61,7 +61,7 @@
                 <article class="blog__article">
                     <div class="blog__article-header">
                         <h2 class="title">
-                            <a href="{{ path('article.show', {'slug': article.slug}) }}">{{ article.title }}</a>
+                            <a href="{{ path('blog.show', {'slug': article.slug}) }}">{{ article.title }}</a>
                         </h2>
                         <span class="category">{{ article.category.name }}</span>
                     </div>
@@ -69,7 +69,7 @@
                         <p class="blog__article-meta">
                             {{ article.metaDescription }} 
                         </p>
-                        <a href="{{ path('article.show', {'slug': article.slug}) }}" class="read-more-link">
+                        <a href="{{ path('blog.show', {'slug': article.slug}) }}" class="read-more-link">
                             Lire la suite
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
                                 <path d="M5 12h14M13 6l6 6-6 6"/>
