--- a/templates/admin_base.html.twig
+++ b/templates/admin_base.html.twig
@@ -23,7 +23,7 @@
         <nav id="sidebar">
             <ul>
                 <li>
-                    <a class="nav__logo" href="{{ path('home')}}">
+                    <a class="nav__logo" href="{{ path('blog')}}">
                         <img class="logo" style="width: 50px;" src="{{ asset('assets/images/logo AL white.png') }}" alt="Logo aurore le perff, développeuse web" loading="lazy">
                     </a>
                 </li>
