--- a/templates/admin/article/new.html.twig
+++ b/templates/admin/article/new.html.twig
@@ -85,8 +85,22 @@
         .catch(error => {
             console.error(error);
         });
+
 </script>
 
+<!-- Style Flatpickr -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr@4.6.13/dist/flatpickr.min.css">
 
+<!-- Script Flatpickr + langue FR -->
+<script src="https://cdn.jsdelivr.net/npm/flatpickr@4.6.13/dist/flatpickr.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/flatpickr@4.6.13/dist/l10n/fr.js"></script>
+
+<script>
+  flatpickr(".flatpickr", {
+    enableTime: false,
+    dateFormat: "Y-m-d",
+    locale: "fr"
+  });
+</script>
 
 {% endblock %}
