mail config correct

--- a/templates/emails/contact.html.twig
+++ b/templates/emails/contact.html.twig
@@ -1,7 +1,7 @@
 <h2>Vous avez reçu un nouveau message</h2>
 <p><strong>Nom :</strong> {{ lastname }}</p>
 <p><strong>Prénom :</strong> {{ firstname }}</p>
-<p><strong>Email :</strong> {{ email }}</p>
+<p><strong>Email :</strong> {{ mail }}</p>
 {% if phone %}
 <p><strong>Téléphone :</strong> {{ phone }}</p>
 {% endif %}
