--- a/templates/main/contact/index.html.twig
+++ b/templates/main/contact/index.html.twig
@@ -60,7 +60,7 @@
         </div>
     </div>
     <div class="contact__submit">
-        <button type="submit" class="button--dark-green">Envoyer</button>
+        {{ form_widget(form.submit) }}
     </div>
 
     {{ form_end(form) }}
