--- a/templates/admin/messages/index.html.twig
+++ b/templates/admin/messages/index.html.twig
@@ -10,23 +10,26 @@
         <tr>
             <th>Date</th>
             <th>Nom</th>
-            <th>Prénom</th>
-            <th>Téléphone</th>
             <th>Email</th>
             <th>Objet</th>
-            <th>Message</th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
         {% for message in messages %}
             <tr>
                 <td data-cell="Date">{{ message.createdAt | date("Y-m-d") }}</td>
-                <td data-cell="Nom">{{ message.lastname }}</td>
-                <td data-cell="Prénom">{{ message.firstname }}</td>
-                <td data-cell="Téléphone">{{ message.phone }}</td>
+                <td data-cell="Nom">{{ message.firstname }} {{ message.lastname }}</td>
                 <td data-cell="Email">{{ message.email }}</td>
                 <td data-cell="Sujet">{{ message.subject }}</td>
-                <td data-cell="Action"><a class="button--light-green" href="{{ path('admin.message.show', { id: message.id }) }}">Voir le message</a></td>
+                <td data-cell="Action">
+                    <a class="button--light-green" href="{{ path('admin.message.show', { id: message.id }) }}">Voir le message</a>
+                    <form action="{{ path('admin.message.delete', {id: message.id}) }}" method="post" onsubmit="return confirm('Confirmer la suppression ?');">
+                        <input type="hidden" name="_method" value="DELETE">
+                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ message.id) }}">
+                        <button class="button--delete">Supprimer</button>
+                    </form>
+                </td>
             </tr>
         {% endfor %}
     </tbody>
