--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,8 +5,16 @@
 {% block body %}
     <form class="form" method="post">
         {% if error %}
-            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') | e }}</div>
         {% endif %}
+
+        {% for label, messages in app.flashes %}
+            {% for message in messages %}
+                <div class="alert alert-{{ label }}">
+                    {{ message | e }}
+                </div>
+            {% endfor %}
+        {% endfor %}
 
         {% if app.user %}
             <div class="mb-3">
@@ -17,7 +25,7 @@
         <h1>Connexion</h1>
         <div>
             <label for="username">Username</label>
-            <input type="text" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="username" required autofocus>
+            <input type="text" value="{{ last_username|e('html_attr') }}" name="_username" id="username" class="form-control" autocomplete="username" required autofocus>
         </div>
         <div>
             <label for="password">Password</label>
