--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -35,8 +35,8 @@
         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
         <div class="checkbox mb-3">
-            <input type="checkbox" name="my_checkbox" id="my_checkbox">
-            <label for="my_checkbox">Se souvenir de moi</label>
+            <input type="checkbox" name="_remember_me" id="_remember_me">
+            <label for="_remember_me">Se souvenir de moi</label>
         </div>
 
         <div class="button-wrapper">
