updated js script in about.js

--- a/templates/main/about/index.html.twig
+++ b/templates/main/about/index.html.twig
@@ -26,44 +26,48 @@
       </div>
     </div>
   </section>
+  <body>
+    <section class="main">
+      <div class="main__container">
+        <h2 class="main__container-title">Les derniers projets</h2>
 
-  <section class="main">
-    <div class="main__container">
-      <h2 class="main__container-title">Les derniers projets</h2>
+        <ul class="main__projects">
+          <li class="main__projects-item">
+            <h3 class="js-home-project-title">[dynamique]</h3>
+            <p class="js-home-project-description">[description]</p>
+            <a href="#" class="js-home-project-link" target="_blank">Voir le projet sur GitHub</a>
+            <div class="js-home-project-tags-container">
+              <span class="tag">[tag]</span>
+              <span class="tag">[tag]</span>
+              <span class="tag">[tag]</span>
+            </div>
+          </li>
+          <li class="main__projects-item">
+            <h3 class="js-home-project-title">[dynamique]</h3>
+            <p class="js-home-project-description">[description]</p>
+            <a href="#" class="js-home-project-link" target="_blank">Voir le projet sur GitHub</a>
+            <div class="js-home-project-tags-container">
+              <span class="tag">[tag]</span>
+              <span class="tag">[tag]</span>
+              <span class="tag">[tag]</span>
+            </div>
+          </li>
+          <li class="main__projects-item">
+            <h3 class="js-home-project-title">[dynamique]</h3>
+            <p class="js-home-project-description">[description]</p>
+            <a href="#" class="js-home-project-link" target="_blank">Voir le projet sur GitHub</a>
+            <div class="js-home-project-tags-container">
+              <span class="tag">[tag]</span>
+              <span class="tag">[tag]</span>
+              <span class="tag">[tag]</span>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
 
-      <ul class="main__projects">
-        <li class="main__projects-item">
-          <h3 class="js-home-project-title">[dynamique]</h3>
-          <p class="js-home-project-description">[description]</p>
-          <a href="#" class="js-home-project-link" target="_blank">Voir le projet sur GitHub</a>
-          <div class="js-home-project-tags-container">
-            <span class="tag">[tag]</span>
-            <span class="tag">[tag]</span>
-            <span class="tag">[tag]</span>
-          </div>
-        </li>
-        <li class="main__projects-item">
-          <h3 class="js-home-project-title">[dynamique]</h3>
-          <p class="js-home-project-description">[description]</p>
-          <a href="#" class="js-home-project-link" target="_blank">Voir le projet sur GitHub</a>
-          <div class="js-home-project-tags-container">
-            <span class="tag">[tag]</span>
-            <span class="tag">[tag]</span>
-            <span class="tag">[tag]</span>
-          </div>
-        </li>
-        <li class="main__projects-item">
-          <h3 class="js-home-project-title">[dynamique]</h3>
-          <p class="js-home-project-description">[description]</p>
-          <a href="#" class="js-home-project-link" target="_blank">Voir le projet sur GitHub</a>
-          <div class="js-home-project-tags-container">
-            <span class="tag">[tag]</span>
-            <span class="tag">[tag]</span>
-            <span class="tag">[tag]</span>
-          </div>
-        </li>
-      </ul>
-    </div>
-</section>
+    <!-- Script JavaScript personnalisé -->
+    <script type="module" src="{{ asset('js/modules/About.js') }}"></script>
+  </body>
 
 {% endblock %}
