--- a/sass/main/_blog.sass
+++ b/sass/main/_blog.sass
@@ -3,10 +3,10 @@
 @use "../abstracts/functions" as fct
 
 .blog
-  width: 90%
+  width: 100%
   max-width: 100%
   margin: 0 auto
-  padding: 20px 0
+  padding: 10px 0
 
 .blog__highlighted-article
   border: 4px solid var.$dark-green
@@ -32,7 +32,7 @@
 
   &__highlighted-metaContainer
     display: flex
-    justify-content: space-between
+    flex-direction: column
     align-items: center
     gap: 20px
     flex-wrap: wrap
@@ -67,14 +67,14 @@
       color: var.$light-green
 
 
-
 .blog__filters
   display: flex
-  justify-content: space-between
+  flex-direction: column
   gap: fct.rem(20)
-  margin-bottom: fct.rem(30)
+  margin-bottom: 20px
 
   select
+    width: 100% 
     padding: 8px
     font-size: 1rem
     border: 2px solid var.$dark-green
@@ -88,6 +88,9 @@
   margin-bottom: 30px
 
 .blog__article
+  display: flex
+  flex-direction: column
+  box-sizing: border-box
   background-color: var.$dark-green
   padding: 20px
   box-shadow: 0 4px 6px rgba(38, 40, 39, 0.1)
@@ -142,55 +145,79 @@
 
 .blog__article-separator
     height: 1px
-    background-color: var.$white
+    background-color: var.$light-grey
     margin: 15px 0
 
+
 .blog__article-footer
+  display: flex
+  flex-direction: column
+  gap: 0.3rem
+  padding-top: 0.5rem
+
+  .date
+    font-size: 0.9rem
+    color: #888
+
+  .tags
+    gap: 10px
     display: flex
-    justify-content: space-between
-    align-items: center
-    padding-top: 0.5rem
+    flex-direction: row
+    box-sizing: border-box
 
-
-    .date, .tags
-      font-size: 0.9rem
-      color: #888
-      display: flex
+    span
+      display: inline-flex
+      align-self: flex-start
       align-items: center
-
-    .tags
-      gap: 10px
-
-      span
-          background-color: var.$secondary-color
-          color: white
-          padding: 5px 10px
-          border-radius: 20px
-          font-size: 0.9rem
-          cursor: pointer
-          display: inline-flex
-          align-items: center
-          height: 100% // optionnel, à ajuster selon le rendu visuel
+      background-color: var.$secondary-color
+      color: white
+      padding: 5px 10px
+      border-radius: 20px
+      font-size: 0.9rem
+      cursor: pointer
+      max-width: 100%
+      box-sizing: border-box
+      word-break: break-word
 
 
 
-// Tablet screens (768px and up)
-@media (min-width: 768px)
+// Tablet screens (650px and up)
+@media (min-width: 650px)
+  .blog
+    width: 80%
+
   .blog__filters
-    width: 70%
     margin: 0 auto
-    justify-content: center
-    gap: fct.rem(30)
+    flex-direction: row
+    justify-content: space-between
+    gap: fct.rem(20)
+
+    select
+      width: auto  
 
   .blog__articles
     margin-top: fct.rem(30)
 
   .blog__article
     padding: 25px
+    display: flex
 
   .pagination a
     font-size: 1.1rem
     padding: 10px 20px
+
+  .blog__article-footer
+    flex-direction: row
+    justify-content: space-between
+    align-items: center
+
+    .tags
+      gap: 10px
+      flex-direction: row
+      flex-wrap: wrap
+
+      span
+        display: inline-flex
 
 // Desktop screens (1024px and up)
 @media (min-width: 1024px)
@@ -203,3 +230,8 @@
   .pagination a
     font-size: 1.2rem
     padding: 12px 25px
+
+    .blog__article-footer
+      flex-direction: row
+      justify-content: space-between
+      align-items: center
