--- a/sass/main/_blog.sass
+++ b/sass/main/_blog.sass
@@ -70,11 +70,12 @@
 .blog__filters
   display: flex
   flex-direction: column
+  align-items: center
   gap: fct.rem(20)
   margin-bottom: 20px
 
   select
-    width: 100% 
+    width: 250px
     padding: 8px
     font-size: 1rem
     border: 2px solid var.$dark-green
@@ -189,11 +190,11 @@
   .blog__filters
     margin: 0 auto
     flex-direction: row
-    justify-content: space-between
+    justify-content: center
     gap: fct.rem(20)
 
     select
-      width: auto  
+      width: 250px
 
   .blog__articles
     margin-top: fct.rem(30)
