--- a/sass/main/_contact.sass
+++ b/sass/main/_contact.sass
@@ -68,6 +68,10 @@
                 box-shadow: 0 0 0 3px var.$light-green
                 outline: none
 
+        textarea
+            min-height: fct.rem(190)
+
+
     .form-error
       color: var.$pink
       font-size: 0.875rem
