--- a/sass/main/_about.sass
+++ b/sass/main/_about.sass
@@ -21,6 +21,7 @@
         flex-direction: column
         justify-content: center
         align-items: center
+        overflow: visible
 
     &__subtitle
         @include mixin.font(0.75rem, 600)
@@ -75,16 +76,17 @@
         flex-direction: column
         justify-content: center
         align-items: center
+
         &-title
             @include mixin.font(1.8rem, 600)
             margin-bottom: fct.rem(35)
     
-    &__projects
-        padding: 0
-        display: flex
-        flex-direction: column
-        gap: fct.rem(20)
-        width: 100%
+        &__projects
+            padding: 0
+            display: flex
+            flex-direction: column
+            gap: fct.rem(20)
+            width: 100%
 
         &-item
             background: var.$white
@@ -101,6 +103,12 @@
 
             &:hover
                 transform: translateY(-5px)
+
+        &__avatar
+            position: absolute
+            top: fct.rem(-65)  // Au lieu de -10, montez-le plus haut
+            right: fct.rem(-65) // Au lieu de -35, décalez-le plus à droite
+            @include mixin.circle(fct.rem(130))
 
         .js-home-project-title
             font-size: fct.rem(25)
