--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -14,7 +14,7 @@
 .hero__container {
   position: relative;
   background: #2b4743;
-  padding: 3.75rem;
+  padding: 1.875rem;
   max-width: 800px;
   width: 80%;
   margin: 0 auto;
@@ -24,7 +24,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  overflow: visible;
+  margin-bottom: 1rem;
 }
 .hero__subtitle {
   font-weight: 600;
@@ -43,10 +43,10 @@
 }
 .hero__avatar {
   position: absolute;
-  top: -0.625rem;
+  top: -1.25rem;
   right: -2.1875rem;
-  width: 8.125rem;
-  height: 8.125rem;
+  width: 6.25rem;
+  height: 6.25rem;
   border-radius: 100%;
   overflow: hidden;
 }
@@ -83,7 +83,7 @@
 .main__container {
   position: relative;
   background: #2b4743;
-  padding: 3.75rem;
+  padding: 1.875rem;
   max-width: 800px;
   width: 80%;
   margin: 0 auto;
@@ -122,27 +122,16 @@
 .main__container-item:hover {
   transform: translateY(-5px);
 }
-.main__container__avatar {
-  position: absolute;
-  top: -4.0625rem;
-  right: -4.0625rem;
-  width: 8.125rem;
-  height: 8.125rem;
-  border-radius: 100%;
-  overflow: hidden;
-}
 .main__container .js-home-project-title {
   font-size: 1.5625rem;
   font-weight: 600;
   margin: 0.625rem 0;
-  color: #2b4743;
+  color: #efe4d5;
 }
 .main__container .js-home-project-description {
   font-size: 1rem;
-  color: #2b4743;
+  color: #efe4d5;
   margin-bottom: 0.9375rem;
-  justify-content: start;
-  text-align: start;
 }
 .main__container .js-home-project-tags-container {
   color: #efe4d5;
@@ -151,6 +140,7 @@
   display: flex;
   gap: 0.3125rem;
   margin: 1.25rem 0;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
 }
@@ -163,6 +153,11 @@
 }
 
 @media screen and (min-width: 768px) {
+  .main__container {
+    padding: 3.75rem;
+    justify-content: start;
+    align-items: start;
+  }
   .main__projects {
     grid-template-columns: repeat(3, 1fr);
   }
@@ -417,7 +412,7 @@
   flex-direction: column;
   gap: 1rem;
   margin: 2.5rem auto;
-  padding: 1.875rem 3.75rem;
+  padding: 1.875rem 1.875rem;
   border: 2px solid #2b4743;
   border-radius: 0.625rem;
   width: 80%;
@@ -425,11 +420,10 @@
 }
 .contact__intro {
   text-align: center;
-  padding: 0.625rem;
   color: #2b4743;
 }
 .contact__intro h1 {
-  font-size: 2.5rem;
+  font-size: 2rem;
   margin-bottom: 1.25rem;
   color: #2b4743;
 }
@@ -712,9 +706,8 @@ body.public {
 }
 .article__page {
   width: 90%;
-  max-width: 70%;
+  max-width: 100%;
   margin: 2.5rem auto;
-  padding: 1rem;
 }
 .article__page article {
   margin-bottom: 3rem;
@@ -730,7 +723,7 @@ body.public {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
+  align-items: start;
   flex-wrap: wrap;
   margin-bottom: 1rem;
   gap: 1rem;
@@ -738,7 +731,6 @@ body.public {
 .article__page article .article__category-tags .article__category {
   font-size: 1.6rem;
   color: #ea638c;
-  margin-bottom: 1rem;
 }
 .article__page article .article__category-tags .article__tags {
   display: flex;
