--- a/sass/main/_article.sass
+++ b/sass/main/_article.sass
@@ -4,9 +4,9 @@
 
 .article__page
     width: 90%
-    max-width: 70%
+    max-width: 100%
     margin: fct.rem(40) auto
-    padding: 1rem
+
 
     article
         margin-bottom: 3rem
@@ -22,7 +22,7 @@
             display: flex
             flex-direction: column
             justify-content: space-between
-            align-items: center
+            align-items: start
             flex-wrap: wrap // utile pour éviter les débordements sur petits écrans
             margin-bottom: 1rem
             gap: 1rem
@@ -30,7 +30,6 @@
             .article__category
                 font-size: var.$font-size-h3
                 color: var.$pink
-                margin-bottom: 1rem
 
             .article__tags
                 display: flex
